# demo-ffi

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  ffi_demo.lib  ffi_demoLIB.lib  library.c  library.h
src/: main.rs
